added category and item count to index view

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p #[strong #{item_count}] items in #[strong #{category_count}] categories
+  
