moved various styles from inline into css classes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+  body(style="display: flex; flex-direction: column; width: 100vw; height: 100vh; margin: 0; padding: 0")
+    header(style="display: flex; flex-shrink: 0; justify-content: center; align-items: center; background-color: #535353; height: 200px; color: white; font-size:36px") 
+      h1 Inventory App
+    main(style="display: flex; flex-grow: 1; flex-direction: column")
+      block content
+
