--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,5 +4,68 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+.contentHeaderWrapper {
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+}
+
+.contentHeader {
+  width: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.category {
+  border: 3px solid black;
+  border-radius: 1em;
+  height: 150px;
+  width: 750px;
+  margin-bottom: 36px;
+  display: flex;
+  align-items: center;
+}
+
+.categoryImageWrapper {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.categoryImage {
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.categoryInfo {
+  width: 60%;
+  height: 100%;
+  padding: 0 16px;
+}
+
+.categoryButtons {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+}
+
+button {
+  border-radius: 1em;
+  padding: 8px 0px;
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
 }
