created category creation-updating form view

--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -3,12 +3,12 @@ extends layout
 block content 
 
    div(style="flex-grow: 1; display: flex; align-items: center; flex-direction: column")
-      h2.contentHeaderText(style="font-size: ")= title
+      h2.contentHeaderText= title
       form(action="" method="POST" style="width: fit-content") 
          div.inputGroup
             label(for="name") Name 
-            input(type="text" name="name" maxlength=20 value=(category ? category.name : ''))
+            input#name.form-control(type="text" name="name" maxlength=20 value=(category ? category.name : ''))
          div.inputGroup
             label(for="description") Description 
-            textarea(name='description' rows=4 maxlength=110) #{category ? category.description : ''}
+            textarea#description.form-control(name='description' rows=4 maxlength=110) #{category ? category.description : ''}
          button(style="width: 80px;" type="submit") Submit
