--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 .contentHeader {
-  width: 75%;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -35,7 +35,7 @@ a {
   align-items: center;
 }
 
-.categoryImageWrapper {
+.cardImageWrapper {
   width: 20%;
   height: 100%;
   display: flex;
@@ -43,19 +43,31 @@ a {
   align-items: center;
 }
 
-.categoryImage {
+.cardImage {
   object-fit: contain;
   max-width: 100%;
   max-height: 100%;
 }
 
-.categoryInfo {
+.cardInfo {
   width: 60%;
   height: 100%;
   padding: 0 16px;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: column;
 }
 
-.categoryButtons {
+.cardInfo h3 {
+  margin-top: 8px;
+}
+
+.cardInfo p {
+  margin-top: 0;
+}
+
+.cardButtons {
   width: 20%;
   display: flex;
   flex-direction: column;
@@ -82,7 +94,8 @@ button {
 }
 
 .inputGroup input,
-.inputGroup textarea {
+.inputGroup textarea,
+.inputGroup select {
   padding: 4px;
   width: 350px;
   border: 3px solid rgb(34, 34, 34);
@@ -92,8 +105,19 @@ button {
   font-kerning: normal;
 }
 
+.inputGroup select {
+  width: 100%;
+}
+
 .inputGroup input:focus,
 .inputGroup textarea:focus {
   border: 3px solid black;
   color: black;
+}
+
+.cardGrid {
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
 }
