set text-align: center on category name

--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -5,7 +5,7 @@ block content
       div.contentHeader(style="margin-bottom: 24px;")
             div(style="width: 175px;")
             div
-               h2.contentHeaderText(style="margin: 0; padding: 12px 24px;") #{category.name}
+               h2.contentHeaderText(style="margin: 0; padding: 12px 24px; text-align: center") #{category.name}
                p(style="text-align: center") #{category.description}
             a(href="/inventory/item/create")
                button(style="width: 175px") + Add new item
