forms use form-data enctype, have image inputs

--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -4,13 +4,17 @@ block content
 
    div(style="flex-grow: 1; display: flex; align-items: center; flex-direction: column")
       h2.contentHeaderText= title
-      form(action="" method="POST" style="width: fit-content") 
+      form(action="" method="POST" style="width: fit-content"  enctype="multipart/form-data") 
          div.inputGroup
             label(for="name") Name 
             input#name.form-control(type="text" name="name" maxlength=40 value=(item ? item.name : ''))
          div.inputGroup
             label(for="description") Description 
             textarea#description.form-control(name='description' rows=4 maxlength=110) #{item ? item.description : ''}
+         if !item
+            div.inputGroup
+               label(for="uploaded-image") Image (png)
+               input#uploaded-image.form-control-file(type='file', name='uploaded-image' accept="image/png")
          div.inputGroup
             label(for="category") Category
             select#category.form-control(name='category')
