--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ a {
   justify-content: space-between;
 }
 
-.category {
+.card {
   border: 3px solid black;
   border-radius: 1em;
   height: 150px;
@@ -35,9 +35,13 @@ a {
   align-items: center;
 }
 
+.card a {
+  max-height: 150px;
+}
+
 .cardImageWrapper {
   width: 20%;
-  height: 100%;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
