--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,15 @@ a {
 
 .contentHeaderText {
   font-size: 28px;
-  padding: 24px;
+  margin: 0;
+  padding: 12px 24px;
+  text-align: center;
+}
+
+.contentDescription {
+  flex-grow: 1;
+  text-align: center;
+  font-size: 1.2em;
 }
 
 .contentHeader {
@@ -37,6 +45,12 @@ a {
 
 .card a {
   max-height: 150px;
+}
+
+.cardDetailLink {
+  display: flex;
+  text-decoration: none;
+  flex: 1;
 }
 
 .cardImageWrapper {
@@ -69,6 +83,13 @@ a {
 
 .cardInfo p {
   margin-top: 0;
+}
+
+.contentHeaderButton {
+  padding: 8px;
+  height: 40px;
+  display: flex;
+  align-items: center;
 }
 
 .cardButtons {
@@ -124,4 +145,10 @@ button {
   place-items: center;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
+}
+
+@media only screen and (max-width: 1500px) {
+  .cardGrid {
+    grid-template-columns: 1fr;
+  }
 }
