--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -10,6 +10,8 @@ block header
    div(style="flex: 1; display: flex; height: 200px")
       div(style="width:28px")
       div(style="flex: 1; display: flex; flex-direction: column; justify-content: center; gap: 16px")
+         a(style="text-decoration: none;", href=category.URL+"/update")
+            button.contentHeaderButton Update
          a(style="text-decoration: none;", href="/item/new")
             button.contentHeaderButton Add new item
 
