--- a/views/item_detail.pug
+++ b/views/item_detail.pug
@@ -8,10 +8,9 @@ block header
          img(style="width: auto; height: auto; max-width:200px; max-height:200px;", src=item.imageURL, onerror="this.src = '/images/default.png'; this.onerror=''")
       p.contentDescription #{item.description}
       h3.contentDescription $#{item.price} • #{item.count} available
-   div(style="flex: 1; display: flex; height: 200px")
-      div(style="width:28px")
-      div(style="flex: 1; display: flex; flex-direction: column; justify-content: center; gap: 16px")
+      div(style="display: flex; justify-content: space-evenly")
          a(style="text-decoration: none;", href=item.URL+"/update")
             button.contentHeaderButton Update
          a(style="text-decoration: none;", href=item.URL + "/delete")
             button.contentHeaderButton(style="background-color: red") Delete
+   div(style="flex: 1")
