--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -15,4 +15,4 @@ block content
             div.inputGroup
                label(for="uploaded-image") Image (png)
                input#uploaded-image.form-control-file(type='file', name='uploaded-image' accept="image/png")
-         button(style="width: 80px;" type="submit") Submit
+         button.cardButton(type="submit") Submit
