--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -29,4 +29,4 @@ block content
          div.inputGroup
             label(for="count") Count
             input#count.form-control(type="tel" name="count" maxlength=5 value=(item ? item.count : ''))
-         button(style="width: 80px;" type="submit") Submit
+         button.cardButton( type="submit") Submit
